Fix #29873: transform with individual origins not working in edge select mode.